# 4_sem_project

./: CMakeLists.txt  FlyingEnemy.cpp  FlyingEnemy.h  Game.cpp  Game.h  HardEnemy.cpp  HardEnemy.h  README.md  enemy.cpp  enemy.h  entity.cpp  entity.h  health.cpp  health.h  main.cpp  makefile  map.cpp  map.h  menu.cpp  menu.h  mission.h  player.cpp  player.h  view.cpp  view.h
